--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ian-website",
-  "homepage": "https://olinkirk.land/ian-website",
+  "homepage": "https://olinkirk.land/ian-website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
